--- a/Email_Agent.ipynb
+++ b/Email_Agent.ipynb
@@ -14,8 +14,8 @@
       "outputs": [],
       "source": [
         "import os\n",
-        "os.environ[\"GOOGLE_API_KEY\"]='AIzaSyCbxGos7C-ZXpm0aMMj5J6iuJeTZAdWbF0'\n",
-        "os.environ[\"LANGCHAIN_API_KEY\"]='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'"
+        "os.environ[\"GOOGLE_API_KEY\"]='your-gemini-api-key'\n",
+        "os.environ[\"LANGCHAIN_API_KEY\"]='your-langchain-api-key'"
       ]
     },
     {
