--- a/Email_Agent.ipynb
+++ b/Email_Agent.ipynb
@@ -15,7 +15,7 @@
       "source": [
         "import os\n",
         "os.environ[\"GOOGLE_API_KEY\"]='your-gemini-api-key'\n",
-        "os.environ[\"LANGCHAIN_API_KEY\"]='your-langchain-api-key'"
+        "os.environ[\"LANGCHAIN_API_KEY\"]='your-langsmith-api-key'"
       ]
     },
     {
